# FastAPI-StarterPack

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  docker-entrypoint.sh  pyproject.toml  requirements.txt
app/: requirements.txt
app/alembic/: env.py
app/src/: cache.py  config.py  database.py  filestorage.py  main.py
app/src/cloud/: router.py
configs/app/: logging.json
configs/gragana/: fastapi_dashboard.json
configs/gragana/dashboards/: fastapi_dashboard.json
configs/gragana/datasources/: prometheus.yaml
configs/prometheus/: prometheus.yaml
infrastructure/alloy/: config.alloy
infrastructure/grafana/: dashboard-provider.yaml
infrastructure/grafana/dashboard/: dada.json  fastapi-dashboard.yaml
infrastructure/grafana/datasource/: loki.yaml  prometheus.yaml
infrastructure/prometheus/: prometheus.yaml
src/: config.py  database.py  lifespan.py  logger.py  main.py
src/middleware/: metrics.py
src/project/: main.py
src/project/presentation/api/: lifespan.py
src/project/presentation/api/middleware/: metrics.py
src/project/presentation/api/routers/: healthcheck.py  metrics.py
src/project/setup/: __init__.py  app_logging.py  config.py
src/routers/: healthcheck.py  metrics.py
src/schemas/: common.py  healthcheck.py
