[project]
name = "fastapi-starterpack"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.133.0",
    "prometheus-client>=0.24.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "setuptools>=82.0.0",
    "uvicorn>=0.41.0",
    "uvloop>=0.22.1",
]
